--- a/.github/workflows/bugbuster.yml
+++ b/.github/workflows/bugbuster.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use Bugster Bot action
-        uses: ./bugster
+        uses: ./.github/actions/bugster
         with:
           ATLASSIAN_API_TOKEN: ${{ secrets.ATLASSIAN_API_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
