--- a/.github/workflows/bugbuster.yml
+++ b/.github/workflows/bugbuster.yml
@@ -7,6 +7,9 @@ jobs:
   run-bugster-bot:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Use Bugster Bot action
         uses: ./.github/actions/bugster
         with:
