--- a/.github/actions/bugster/action.yml
+++ b/.github/actions/bugster/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: 'Destination Branch'
     required: true
   EXTENTIONS_TO_CHECK:
-    description: 'Extentions to check separated whit commas ej: py,js,cs'
+    description: 'Extensions to check separated with commas, e.g.: py,js,cs'
     required: true
   ATLASSIAN_API_TOKEN:
     description: 'Atlassian API Token'
@@ -28,11 +28,13 @@ runs:
         python-version: '3.10'
 
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         pip install requests openai python-dotenv
 
     - name: Run bot.py
+      shell: bash
       env:
         BRANCH: ${{ inputs.BRANCH }}
         DESTINATION_BRANCH: ${{ inputs.DESTINATION_BRANCH }}
