--- a/.github/workflows/bugbuster.yml
+++ b/.github/workflows/bugbuster.yml
@@ -13,5 +13,6 @@ jobs:
       - name: Use Bugster Bot action
         uses: ./.github/actions/bugster
         with:
+          EXTENTIONS_TO_CHECK: cs
           ATLASSIAN_API_TOKEN: ${{ secrets.ATLASSIAN_API_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
