--- a/.github/workflows/bugbuster.yml
+++ b/.github/workflows/bugbuster.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Use Bugster Bot action
         uses: ./.github/actions/bugster
         with:
+          BRANCH: ${{ github.event.pull_request.head.ref }}
+          DESTINATION_BRANCH: ${{ github.event.pull_request.base.ref }}
           EXTENTIONS_TO_CHECK: cs
           ATLASSIAN_API_TOKEN: ${{ secrets.ATLASSIAN_API_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
