--- a/.github/actions/bugster/action.yml
+++ b/.github/actions/bugster/action.yml
@@ -38,6 +38,7 @@ runs:
       env:
         BRANCH: origin/${{ inputs.BRANCH }}
         DESTINATION_BRANCH: origin/${{ inputs.DESTINATION_BRANCH }}
+        GITHUB_REPOSITORY: ${{ inputs.repository }}
         OPENAI_API_KEY: ${{ inputs.OPENAI_API_KEY }}
         ATLASSIAN_API_TOKEN: ${{ inputs.ATLASSIAN_API_TOKEN }}
       run: python bot.py cs
